--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,18 @@
 .App {
-  min-height: 100vh;
+  min-height:100vh;
+  width: 90%;
+  background-image:   url("./assets/FeaturedCoverImage.png") ;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.img{
-position: fixed;
-height: 1080px;
-width: 1920px;
-}
+
 
 .page {
 margin-left: 157px;
+margin-top: 180px;
+position: absolute;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 }
