--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,22 @@
 .App {
   min-height:100vh;
-  width: 90%;
-  background-image:   url("./assets/FeaturedCoverImage.png") ;
+  width:100%;
+  background-color: black;
+  /* background-image:   url("./assets/FeaturedCoverImage.png") ;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
+.img{
+height: 100vh;
+position: fixed;
+width: 100%;
+}
 
 .page {
 margin-left: 157px;
-margin-top: 180px;
-position: absolute;
+position: relative;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
