--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,6 +1,9 @@
 .main{ 
-font-size: 32px;
-height: 400px;
+font-size: 30px;
+display: flex;
+margin-top: 150px;
+flex-direction: column;
+align-items: flex-start;
 }
 .category{
     color: #858688;
@@ -8,6 +11,12 @@ height: 400px;
 .movieInfo{
 display: flex;
 color: #F1F1F1;
+}
+.rating{
+margin-left: 15px;
+}
+.duration{
+margin-left: 15px;
 
 }
 .description{
