--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,4 +1,6 @@
 .nav {
+background-color: #040404;
+opacity: 0.9;
 position: fixed;
 display: flex;
 flex-direction: column;
@@ -9,7 +11,10 @@ z-index: 6;
 
 }
 .navBar {
-  height: 100%;
+height:90%;
+}
+.profPic{
+width: 82px;
 }
 .profInfo{
 visibility: hidden;
@@ -32,7 +37,7 @@ cursor: pointer;
 display: flex;
 flex-direction: column;
 justify-content: space-evenly;
-height: 100%;
+height: 70%;
 }
 .icons {
 display: flex;
@@ -53,6 +58,7 @@ font-size: 36px;
 }
 
 .nav:hover{
+
 & .navFooter, .itemText, .profName {
   display: block;
   animation-name: floating;
@@ -71,6 +77,12 @@ font-size: 36px;
   visibility: visible;
   animation-name: layering;
 }
+& .navFooter{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+
+}
 }
 
 .layer {
@@ -87,10 +99,8 @@ font-size: 36px;
 
 .navFooter {
 display: none;
-flex-direction: column;
-justify-content: space-evenly;
 padding: 24px 20px;
-height: 20%;
+height: 10%;
 
 color: #858688;
 font-size: 24px;
