--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,22 @@
-.App {
-  min-height:100vh;
-  width:100%;
+.app {
+  min-height: 100vh;
+  width: 100%;
   background-color: black;
-  /* background-image:   url("./assets/FeaturedCoverImage.png") ;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
 }
 
 .img{
-height: 100vh;
-position: fixed;
-width: 100%;
+  height: 100vh;
+  position: absolute;
+  width: calc(100% - 150px);
+  margin-left: 150px;
 }
 
 .page {
-margin-left: 157px;
-position: relative;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  min-height: 100vh;
+  margin-left: 157px;
 }
