--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,53 +1,58 @@
-.nav {
-  background-color: #040404;
+.nav {  
   position: fixed;
+  z-index: 6;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   padding: 0 40px 0 30px;
-  z-index: 6;
+  background-color: #040404;
 }
+
 .navBar {
   height:90%;
 }
-.profPic{
-  width: 82px;
-}
+
 .profInfo{
   visibility: hidden;
   display: flex;
+  align-items: center;
   margin-top: 60px;
 }
 
-.profName{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  color: #F1F1F1;
-  font-size: 32px;
-  display: none;
-
+.profPic{
+  width: 82px;
 }
+
+.profName{
+  display: none;
+  margin-left: 20px;
+  font-size: 32px;
+  color: #F1F1F1;
+}
+
 .iconsList{
-  cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 70%;
+  cursor: pointer;
 }
+
 .icons {
   display: flex;
-  padding: 24px;
   align-items: center;
+  height: 70px;
+  padding: 24px;  
   border-radius: 12px;
   transition: background-color 1s;
 }
-.icons:hover{
-  background-color: #3b486d;
+
+.icons:hover{  
   font-weight: bold;
+  background-color: #3b486d;
 }
+
 .itemText{
   display: none;
   margin-left: 50px;
@@ -56,64 +61,65 @@
 }
 
 .nav:hover{
+  & .nav, .navFooter, .itemText, .profName {
+    display: block;
+    animation-name: floating;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+  }
 
-& .nav, .navFooter, .itemText, .profName {
-  display: block;
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-timing-function: ease-in-out;
+  &  .profInfo {
+    visibility: visible;
+    animation-name: floating;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+  }
 
-}
-&  .profInfo {
-  visibility: visible;
-  animation-name: floating;
-  animation-duration: 2s;
-  animation-timing-function: ease-in-out;
-}
+  & + .layer {
+    visibility: visible;
+    animation-name: layering;
+  }
 
-& + .layer {
-  visibility: visible;
-  animation-name: layering;
-}
-& .navFooter{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-}
+  & .navFooter{
+    visibility: visible;    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: auto;
+  }
 }
 
 .layer {
-  background: transparent linear-gradient(90deg, #040404 0%, #040404FA 21%, #04040400 100%) 0% 0% no-repeat padding-box;
   visibility: hidden;
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 5;
   width: 100vw;
   height: 100%;
+  background: transparent linear-gradient(90deg, #040404 0%, #040404FA 21%, #04040400 100%) 0% 0% no-repeat padding-box;
   animation-duration: 2s;
   animation-timing-function: ease-in-out;
-  z-index: 5;
 }
 
 .navFooter {
-  display: none;
-  padding: 24px 20px;
+  visibility: hidden;
+  width: 0px;
   height: 10%;
-  color: #858688;
+  padding: 24px 20px;
   font-size: 24px;
   font-weight: bold;
+  color: #858688;
 }
  
 @keyframes floating {
   0% { opacity: 0; }
   50%  { opacity: 0.5; }
-  100%   { opacity: 1; }    
+  100%  { opacity: 1; }    
 }
 
-
 @keyframes layering {
-  0% { opacity: 0; width: 0; }
+  0% { opacity: 0; width: 0vw; }
   50%  { opacity: 0.4; width: 50vw; }
   100%   { opacity: 0.8;  width: 100vw;}    
 }
